versioned_docs/version-3.0/indexes/indexing-related-documents.mdx
---
title: "Indexing Related Documents"
hide_table_of_contents: true
sidebar_label: Indexing Related Documents
sidebar_position: 11
---

import Admonition from '@theme/Admonition';
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';
import CodeBlock from '@theme/CodeBlock';
import LanguageSwitcher from "@site/src/components/LanguageSwitcher";
import LanguageContent from "@site/src/components/LanguageContent";

# Indexing Related Documents

To extend indexing capabilities and simplify many scenarios, we have introduced the possibility for indexing related documents.

## Example I

Firstly, let's consider a simple `Product - Category` scenario where you want to look for a `Product` by `Category Name`.

Without this feature, the index that had to be created would be a fairly complex multiple map-reduce index. This is why the `LoadDocument` function was introduced.

<Tabs groupId='languageSyntax'>
<TabItem value="AbstractIndexCreationTask" label="AbstractIndexCreationTask">
<CodeBlock language="csharp">
{`public class Products_ByCategoryName : AbstractIndexCreationTask<Product>
{
	public class Result
	{
		public string CategoryName { get; set; }
	}

	public Products_ByCategoryName()
	{
		Map = products => from product in products
					select new
					{
						CategoryName = LoadDocument<Category>(product.Category).Name
					};
	}
}
`}
</CodeBlock>
</TabItem>
<TabItem value="Commands" label="Commands">
<CodeBlock language="csharp">
{`store.DatabaseCommands.PutIndex("Products/ByCategoryName", new IndexDefinition
{
	Map = @"from product in products
		select new
		{
			CategoryName = LoadDocument(product.Category).Name
		}"
});
`}
</CodeBlock>
</TabItem>
</Tabs>

Now we will be able to search for products using the `Category Name` as a parameter:

<TabItem value="indexing_related_documents_7" label="indexing_related_documents_7">
<CodeBlock language="csharp">
{`IList<Product> matchingProducts = session
    .Query<Products_ByCategoryName_NoTracking.IndexEntry, Products_ByCategoryName_NoTracking>()
    .Where(x => x.CategoryName == "Beverages")
    .OfType<Product>()
    .ToList();
`}
</CodeBlock>
</TabItem>

## Example II

Our next scenario will show us that indexing of more complex relationships is also trivial. Let's consider the following case:

<TabItem value="indexing_related_documents_4" label="indexing_related_documents_4">
<CodeBlock language="csharp">
{`public class Authors_ByBooks : AbstractIndexCreationTask<Author>
\{
    public class IndexEntry
    \{
        public IEnumerable<string> BookNames \{ get; set; \}
    \}

    public Authors_ByBooks()
    \{
        Map = authors => from author in authors
            select new IndexEntry
            \{
                // For each Book ID, call LoadDocument and index the book's name
                BookNames = author.BookIds.Select(x => LoadDocument<Book>(x).Name)
            \};
        
        // Since NoTracking was Not specified,
        // then any change to either Authors or Books will trigger reindexing 
    \}
\}
`}
</CodeBlock>
</TabItem>

Now, to create an index with `Author Name` and list of `Book Names`, we need do the following:

<Tabs groupId='languageSyntax'>
<TabItem value="AbstractIndexCreationTask" label="AbstractIndexCreationTask">
<CodeBlock language="csharp">
{`public class Authors_ByNameAndBooks : AbstractIndexCreationTask<Author>
{
	public class Result
	{
		public string Name { get; set; }

		public IList<string> Books { get; set; }
	}

	public Authors_ByNameAndBooks()
	{
		Map = authors => from author in authors
					select new
					{
						Name = author.Name,
						Books = author.BookIds.Select(x => LoadDocument<Book>(x).Name)
					};
	}
}
`}
</CodeBlock>
</TabItem>
<TabItem value="Commands" label="Commands">
<CodeBlock language="csharp">
{`store.DatabaseCommands.PutIndex("Authors/ByNameAndBooks", new IndexDefinition
{
	Map = @"from author in docs.Authors
		select new
		{
			Name = author.Name,
			Books = author.BookIds.Select(x => LoadDocument(x).Id)
		}"
});
`}
</CodeBlock>
</TabItem>
</Tabs>

<TabItem value="indexing_related_documents_8" label="indexing_related_documents_8">
<CodeBlock language="csharp">
{`IList<Author> results = session
    .Query<Authors_ByNameAndBooks.Result, Authors_ByNameAndBooks>()
    .Where(x => x.Name == "Andrzej Sapkowski" || x.Books.Contains("The Witcher"))
    .OfType<Author>()
    .ToList();
`}
</CodeBlock>
</TabItem>

## Remarks

<Admonition type="info" title="">
Indexes are updated automatically when related documents change.
</Admonition>

<Admonition type="warning" title="">
Using the `LoadDocument` adds a loaded document to the tracking list. This may cause very expensive calculations to occur, especially when multiple documents are tracking the same document.
</Admonition>

